--- a/theme/_sass/_revealjs-theme.scss
+++ b/theme/_sass/_revealjs-theme.scss
@@ -217,6 +217,8 @@ $titleTextShadow: 2px 2px 1px darken($theme-color, 20%);
 	border-radius: 5px;
 	text-align: left;
 	margin-top: 20px !important;
+	display: inline-block;
+	max-width: 100%;
 
 	&:hover {
 		&::after {
@@ -233,6 +235,7 @@ $titleTextShadow: 2px 2px 1px darken($theme-color, 20%);
 		border-radius: 5px;
 		height: 100%;
 		float: right;
+		margin-left: 20px;
 		width: 5em;
 		text-align: center;
 	}
