Additional content and images for WIP Spectrum Chapter
Signed-off-by: Tanya Gray <tanyagray.nz@gmail.com>

--- a/theme/_sass/_revealjs-theme.scss
+++ b/theme/_sass/_revealjs-theme.scss
@@ -185,8 +185,8 @@ $titleTextShadow: 2px 2px 1px darken($theme-color, 20%);
 				float: left;
 				display: block;
 				padding-right: 20px;
+				padding-left: 30px;
 				margin-right: 20px;
-				height: 400px;
 			}
 		}
 
