Updates to text content and images
Signed-off-by: Tanya Gray <Tanya@Wonkbook.local>

--- a/theme/_includes/course-tile.html
+++ b/theme/_includes/course-tile.html
@@ -1,7 +1,7 @@
 <div class="tile-link col-md-4">
 
 	{% if course.published == false %}
-	<a>
+	<a style="opacity:0.5;">
     {% else %}
     <a href="{{ site.baseurl }}/courses/{{ course.name }}">
     {% endif %}
